Fix Wiki menu cutting off

--- a/client/src/menu/game/gameScreenContent/wikiMenu.css
+++ b/client/src/menu/game/gameScreenContent/wikiMenu.css
@@ -1,6 +1,8 @@
 .wiki-menu {
     display: flex;
     flex-direction: column;
-    overflow-y: hidden;
-    max-height: 1vh;
+}
+.wiki-menu > .wiki-menu-search {
+    min-height: 0;
+    flex-grow: 1;
 }
